# pointcloud_compressor

./: CMakeLists.txt  README.md
src/: dictionary_representation.cpp  dictionary_representation.h  ksvd_decomposition.cpp  ksvd_decomposition.h  orthogonal_matching_pursuit.cpp  orthogonal_matching_pursuit.h  pointcloud_combined.cpp  pointcloud_combined.h  pointcloud_compressor.cpp  pointcloud_compressor.h  pointcloud_compressor2.cpp  pointcloud_compressor2.h  pointcloud_compressor_old.cpp  pointcloud_compressor_old.h  pointcloud_decompressor.cpp  pointcloud_decompressor.h  test.cpp  test_compress.cpp  test_decompress.cpp
